samples/_failures_safe/1761554405_5cac2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abd64671.c: In function ‘main’:
./samples/SAFE/__tmp_abd64671.c:174:12: error: missing terminating " character
  174 |     printf("4.
      |            ^~~
./samples/SAFE/__tmp_abd64671.c:174:5: error: expected expression at end of input
  174 |     printf("4.
      |     ^~~~~~
./samples/SAFE/__tmp_abd64671.c:174:5: error: expected declaration or statement at end of input
